# AutoGaze

./: .gitignore  INTEGRATION.md  QUICK_START.md  README.md  TRAIN.md  pyproject.toml
analysis_outputs/reconstruction_eval/: metadata.json  metrics_by_clip_setting.csv  metrics_by_frame.csv  summary.txt  summary_by_setting.csv
autogaze/: __init__.py  train.py  trainer.py  utils.py
autogaze/algorithms/: __init__.py  dummy.py  grpo.py  ntp.py
autogaze/configs/: video_folder_siglip_video_feature_reconstruction_ar_gaze_dummy.yaml  video_folder_siglip_video_feature_reconstruction_ar_gaze_grpo.yaml  video_folder_video_mae_reconstruction_ar_gaze_grpo.yaml  video_folder_video_mae_reconstruction_ar_gaze_ntp.yaml
autogaze/configs/algorithm/: dummy.yaml  grpo.yaml  ntp.yaml
autogaze/configs/dataset/: video_folder.yaml
autogaze/configs/model/: autogaze.yaml
autogaze/configs/task/: siglip_video_feature_reconstruction.yaml  video_mae_reconstruction.yaml
autogaze/configs/trainer/: trainer.yaml
autogaze/datasets/: __init__.py  collate.py  video_folder.py  video_utils.py
autogaze/models/autogaze/: __init__.py  autogaze.py  configuration_autogaze.py  modeling_autogaze.py  modeling_llama_multi_token_pred.py  processing_autogaze.py
autogaze/tasks/video_mae_reconstruction/: __init__.py  configuration_video_mae.py  modeling_video_mae.py  task_video_mae_reconstruction.py  visualize_video_mae_reconstruction.py
repro/: micromamba-linux-64.explicit.txt  pip-third-party-exact.txt
scripts/: evaluate_reconstruction.py  example_ntp_training.sh  example_rl_training.sh
(+3 files in other folders)
